--- a/tests/data/Cargo.toml
+++ b/tests/data/Cargo.toml
@@ -10,11 +10,14 @@ path = "lib.rs"
 proc-macro = true
 
 [dependencies]
-proc-macro2 = "1.0"
-quote = "1.0"
+proc-macro2 = "=1.0.60"
+quote = "=1.0.28"
 
 [build-dependencies]
 anyhow = "1.0"
-flate2 = "1.0"
-reqwest = { version = "0.11", features = ["blocking"] }
+flate2 = "=1.0.26"
+minreq = { version = "=2.6.0", features = ["https-native"] }
+native-tls = "=0.2.11"
+once_cell = "=1.18.0"
+security-framework-sys = "=2.9.1"
 tar = "0.4.16"
