--- a/tests/data/Cargo.toml
+++ b/tests/data/Cargo.toml
@@ -19,5 +19,8 @@ flate2 = "=1.0.26"
 minreq = { version = "=2.6.0", features = ["https-native"] }
 native-tls = "=0.2.11"
 once_cell = "=1.18.0"
+# Pin OpenSSL versions for Rust 1.64.0 compatibility on Linux
+openssl = "=0.10.64"
+openssl-sys = "=0.9.101"
 security-framework-sys = "=2.9.1"
 tar = "0.4.16"
